cmake_minimum_required(VERSION 3.8)
project(Evolutionary_Computation)

set(CMAKE_CXX_STANDARD 14)



add_subdirectory(${CMAKE_SOURCE_DIR}/class_01)
add_subdirectory(${CMAKE_SOURCE_DIR}/class_02)
add_subdirectory(${CMAKE_SOURCE_DIR}/class_03)
add_subdirectory(${CMAKE_SOURCE_DIR}/class_04)
add_subdirectory(${CMAKE_SOURCE_DIR}/class_05)
add_subdirectory(${CMAKE_SOURCE_DIR}/class_06)
