# This folder contains examples that are useful to methodological issues

# An example of a t-test to compare algorithms
add_subdirectory(ttest)

# An example of plotting in real-time with python's matplotlib
add_subdirectory(matplotlibcpp)

# A better example of plotting with python and how to use other python libraries
add_subdirectory(pybindplot)